update HttpUtil